@@ -2,10 +2,12 @@
 ---
 - libmpg123 API version 26 (see NEWS.libmpg123)
 - Cleanup of symbols for the static library: Only have global symbols that are actually needed, prefix them with INT123_ to avoid conflicts.
+- Added --streamdump to get a copy of the data libmpg123 used.
 TODO:
 - Remove compiler directives for alignment and disable associated tests.
   The tests don't work on a wide range of compilers anyway, and newer gccs
   do have force_align_arg_pointer to fix bad stacks.
+- Get the first pieces of raw API in -- the public_struct stuff!
 - There is no ChangeLog file anymore... it was autogenerated from subversion log anyway, so look there if interested.
 
 1.12.2
